// ============================================================================
// /hr/employee-experience-service (版本 2.0)
// 描述: 管理员工体验，例如员工敬业度调查、反馈和认可。
// ============================================================================

syntax = "proto3";

package hr.ex.v1;

option go_package = "github.com/enterprise/erp/protos/hr/ex;ex";


import "google/protobuf/timestamp.proto";
import "common/common.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

// ============================================================================
// 服务定义: EmployeeExperienceService
// ============================================================================

service EmployeeExperienceService {

  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_tag) = {
    description: "管理员工体验，例如员工敬业度调查、反馈和认可。"
  };
  // 发起一个员工调查 - 异步
  rpc LaunchSurvey(LaunchSurveyRequest) returns (common.v1.JobInfo) {

    option (google.api.http) = {

      post: "/api/v1/hr/launch-survey"

      body: "*"

    };

  }
  
  // 查询调查列表 (New)
  rpc ListSurveys(ListSurveysRequest) returns (ListSurveysResponse) {

  
    option (google.api.http) = {

  
      get: "/api/v1/hr/surveys"

  
    };

  
  }

  // 提交员工调查回复
  rpc SubmitSurveyResponse(SubmitSurveyResponseRequest) returns (SubmitSurveyResponseResponse) {


    option (google.api.http) = {


      post: "/api/v1/hr/survey-response/submit"


      body: "*"


    };


  }

  // 获取调查结果分析
  rpc GetSurveyAnalytics(GetSurveyAnalyticsRequest) returns (SurveyAnalytics) {


    option (google.api.http) = {


      get: "/api/v1/hr/survey-analytics"


    };


  }

  // 给予员工认可/赞赏
  rpc GiveRecognition(GiveRecognitionRequest) returns (GiveRecognitionResponse) {


    option (google.api.http) = {


      post: "/api/v1/hr/give-recognition"


      body: "*"


    };


  }
  
  // 查询认可列表 (New)
  rpc ListRecognitions(ListRecognitionsRequest) returns (ListRecognitionsResponse) {

  
    option (google.api.http) = {

  
      get: "/api/v1/hr/recognitions"

  
    };

  
  }
  
  // 获取认可动态 (New)
  rpc GetRecognitionFeed(GetRecognitionFeedRequest) returns (GetRecognitionFeedResponse) {

  
    option (google.api.http) = {

  
      get: "/api/v1/hr/recognition-feed"

  
    };

  
  }
}

// ============================================================================
// 数据结构: Survey & Recognition
// ============================================================================

// 员工调查
message Survey {
  string survey_id = 1;
  string title = 2;
  repeated SurveyQuestion questions = 3;
  string target_audience = 4;
  common.v1.DateRange active_period = 5;
  common.v1.SurveyStatus status = 6;
  common.v1.AuditData audit_data = 7;
}

// 调查问题
message SurveyQuestion {
  string question_id = 1;
  string text = 2;
  common.v1.QuestionType question_type = 3;
  repeated string options = 4;
}

// 调查结果分析
message SurveyAnalytics {
  string survey_id = 1;
  double participation_rate = 2;
  double overall_engagement_score = 3;
  repeated QuestionAnalytics question_analytics = 4;
}

// 问题分析
message QuestionAnalytics {
  string question_id = 1;
  double average_score = 2;
  map<string, int32> response_distribution = 3;
}

// 员工认可
message Recognition {
  string recognition_id = 1;
  string giver_employee_id = 2;
  string receiver_employee_id = 3;
  string message = 4;
  string company_value_aligned = 5;
  google.protobuf.Timestamp recognition_time = 6;
  common.v1.RecognitionStatus status = 7;
}

// ============================================================================
// RPC 消息定义
// ============================================================================

// 发起调查请求
message LaunchSurveyRequest {
  Survey survey = 1;
  common.v1.RequestContext context = 99;
}

message ListSurveysRequest {
  common.v1.SurveyStatus status_filter = 1;
  common.v1.DateRange date_range = 2;
  string target_audience = 3;
  common.v1.PaginationRequest pagination = 98;
  common.v1.RequestContext context = 99;
}

message ListSurveysResponse {
  repeated Survey surveys = 1;
  common.v1.PaginationResponse pagination = 2;
}

// 提交调查回复请求
message SubmitSurveyResponseRequest {
  string survey_id = 1;
  string respondent_employee_id = 2;
  repeated SurveyAnswer answers = 3;
  common.v1.RequestContext context = 99;
}

// 调查回复
message SurveyAnswer {
  string question_id = 1;
  string answer_value = 2;
}

// 提交调查回复响应
message SubmitSurveyResponseResponse {
  bool success = 1;
  repeated common.v1.ApiMessage messages = 2;
}

// 获取调查分析请求
message GetSurveyAnalyticsRequest {
  string survey_id = 1;
  common.v1.RequestContext context = 99;
}

// 给予认可请求
message GiveRecognitionRequest {
  Recognition recognition = 1;
  common.v1.RequestContext context = 99;
}

// 给予认可响应
message GiveRecognitionResponse {
  bool success = 1;
  string recognition_id = 2;
  repeated common.v1.ApiMessage messages = 3;
}

message ListRecognitionsRequest {
  string employee_id = 1;
  common.v1.DateRange date_range = 2;
  common.v1.RecognitionStatus status_filter = 3;
  common.v1.PaginationRequest pagination = 98;
  common.v1.RequestContext context = 99;
}

message ListRecognitionsResponse {
  repeated Recognition recognitions = 1;
  common.v1.PaginationResponse pagination = 2;
}

message GetRecognitionFeedRequest {
  string department = 1;
  int32 limit = 2;
  common.v1.RequestContext context = 99;
}

message GetRecognitionFeedResponse {
  repeated Recognition feed = 1;
}
